--- a/style7.css
+++ b/style7.css
@@ -27,11 +27,32 @@ body {
   padding: 0 var(--mv-side-space, 16px);
 }
 
+div:has(> .help-center-title) {
+  /* background-color: rgb(67, 67, 189); */
+  width: 100vw;
+  /* height: 250px; */
+  margin-left: calc(-50vw + 50%);
+  padding: clamp(25px, 8vw, 57px) var(--mv-side-space);
+  background-image: url(./help_center_header.jpg);
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.help-center-title {
+  font-size: clamp(20px, 4vw, 36px);
+  text-align: center;
+  padding-bottom: clamp(12px, 2vw, 18px);
+  color: var(--White, #fbfbfb);
+  font-weight: 600;
+}
 #search {
   width: 100%;
   padding: 10px;
   /* margin-bottom: 6px; */
-  padding: 20px 20px 20px 50px;
+  padding: 12px 20px 12px 50px;
   border-radius: 100px;
   border: 1px solid var(--Stroke, #dadce0);
   background: var(--White, #fbfbfb);
@@ -40,9 +61,15 @@ body {
   line-height: normal;
 }
 
+#search::placeholder {
+  color: var(--Tertiary-Gray, #a6a6a6);
+  font-weight: 400;
+  line-height: normal;
+}
+
 .search-results {
-  border: 1px solid #ddd;
-  border-radius: 6px;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.04), 0 8px 16px 0 rgba(0, 0, 0, 0.08);
+  border-radius: 25px;
   background: #fff;
   position: absolute;
   width: 100%;
@@ -50,6 +77,7 @@ body {
   overflow-y: auto;
   z-index: 20;
   display: none;
+  top: 120%;
 }
 
 .search-item {
@@ -60,6 +88,31 @@ body {
 
 .search-item:hover {
   background: #f1f1f1;
+}
+
+.search-wrapper {
+  position: relative;
+  width: 100%;
+  margin-bottom: 6px;
+  display: flex;
+  max-width: 614px;
+  margin: 0 auto;
+}
+
+.search-wrapper input {
+  width: 100%;
+  padding: 10px 10px 10px 36px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+
+.search-icon {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  /* pointer-events: none; */
+  cursor: pointer;
 }
 
 .help-layout {
@@ -153,29 +206,7 @@ body {
 .preview {
   font-size: 12px;
   color: #555;
-}
-
-.search-wrapper {
-  position: relative;
-  width: 100%;
-  margin-bottom: 6px;
-}
-
-.search-wrapper input {
-  width: 100%;
-  padding: 10px 10px 10px 36px;
-  /* extra left padding for icon */
-  border: 1px solid #ccc;
-  border-radius: 6px;
-}
-
-.search-wrapper .search-icon {
-  position: absolute;
-  left: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-  /* pointer-events: none; */
-  cursor: pointer;
+  /* -webkit-line-clamp: 1; */
 }
 
 /* Render Questions */
@@ -266,6 +297,19 @@ body {
 }
 
 @media (width < 768px) {
+  #search {
+    padding: 8px 20px 8px 45px;
+    font-size: 14px;
+    margin: 0 auto;
+  }
+
+  .search-wrapper {
+    width: 90%;
+  }
+
+  .search-icon {
+    left: 16px;
+  }
   .breadcrumb {
     white-space: nowrap;
     overflow: hidden;
