--- a/style7.css
+++ b/style7.css
@@ -206,6 +206,11 @@ div:has(> .help-center-title) {
 .preview {
   font-size: 12px;
   color: #555;
+  display: block;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
   /* -webkit-line-clamp: 1; */
 }
 
