--- a/style7.css
+++ b/style7.css
@@ -2,6 +2,15 @@
   --dropdown-transition-open: max-height 1s ease-in, opacity 0.3s ease-in;
   --dropdown-transiton: 0.7s ease, max-height 0.4s ease;
   --mv-side-space: 16px;
+
+  --faq-gap: 12px;
+  --faq-radius: 12px;
+  --faq-border: #e2e3eb;
+  --faq-accent: #445ac8;
+  --faq-transition: 280ms cubic-bezier(0.3, 0.9, 0.4, 1);
+
+  --helpcenter-section-title: clamp(18px, 4vw, 30px);
+  --fs-sm: clamp(14px, 2vw, 20px);
 }
 * {
   box-sizing: border-box;
@@ -14,18 +23,109 @@ html {
   scrollbar-gutter: stable;
   scroll-padding-top: 150px;
 }
+
+.helpcenter-section-title {
+  font-size: var(--helpcenter-section-title, 18px, 4vw, 30px);
+  font-weight: 600;
+  line-height: 126.667%;
+  color: var(--Primary-Black, #282727);
+  text-align: center;
+}
+
+@media screen and (width > 1024px) {
+  .helpcenter-section-title {
+    text-align: start;
+  }
+}
+
 #help-center button {
   background-color: transparent;
-  /* border: unset; */
 }
 
 body {
   font-family: Arial, sans-serif;
   color: #222;
+  overflow-x: hidden;
+}
+main {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+
+#help-landing .landing-topics-container {
+  gap: clamp(16px, 6vw, 65px);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.landing-topics-container img {
+  width: clamp(85px, 12vw, 150px);
+  height: auto;
+}
+
+@media screen and (width > 1024px) {
+  #help-landing .landing-topics-container {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+}
+
+#help-landing {
+  margin: 0 auto;
+  flex-direction: column;
+  gap: clamp(40px, 8vw, 90px);
+}
+
+#help-landing .landing-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  gap: 4px;
+}
+
+#help-landing .landing-topics-container h2 {
+  font-size: clamp(14px, 2.5vw, 24px);
+  line-height: 133.33%;
+  font-weight: 600;
+  color: var(--Primary-Black, #282727);
+  margin-bottom: 8px;
+}
+
+#help-landing .landing-topics-container button {
+  border: unset;
+  background-color: transparent;
+  color: var(--text-text-link-light-bg, #3f59d9);
+  max-width: clamp(150px, 35vw, 255px);
+  text-align: start;
+  font-size: clamp(14px, 2vw, 18px);
+  cursor: pointer;
+}
+
+#help-landing .landing-topics-container button:hover {
+  color: var(--text-text-link-light-bg, #3f59d9);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
+  text-decoration-skip-ink: none;
+  text-decoration-color: var(--text-text-link-light-bg, #3f59d9);
+  text-decoration-thickness: 10%;
+  text-underline-offset: 25%;
+  text-underline-position: from-font;
+}
+#help-landing ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 #help-center {
-  max-width: 1000px;
+  /* max-width: 1000px; */
   margin: auto;
   position: relative;
   padding: 0 var(--mv-side-space, 16px);
@@ -44,7 +144,7 @@ div:has(> .help-center-title) {
   /* height: 250px; */
   margin-left: calc(-50vw + 50%);
   padding: clamp(25px, 8vw, 57px) var(--mv-side-space);
-  background-image: url(./help_center_header.jpg);
+  background-image: url(images/help_center_header.jpg);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -190,15 +290,25 @@ div:has(> .help-center-title) {
   max-height: 0;
   opacity: 0;
   overflow: hidden;
-  transition: var(--dropdown-transition, 0.7s ease, max-height 0.4s ease);
+  transition: var(
+    --dropdown-transition,
+    0.7s cubic-bezier(0.3, 0.9, 0.4, 1),
+    max-height 0.4s cubic-bezier(0.3, 0.9, 0.4, 1)
+  );
+  /* transition: var(--dropdown-transition, 0.7s ease, max-height 0.4s ease); */
 }
 
 .dropdown-content.open {
   transition: var(
     --dropdown-transition-open,
+    max-height 1s cubic-bezier(0.3, 0.9, 0.4, 1),
+    opacity 0.3s cubic-bezier(0.3, 0.9, 0.4, 1)
+  );
+  /* transition: var(
+    --dropdown-transition-open,
     max-height 1s ease-in,
     opacity 0.3s ease-in
-  );
+  ); */
   opacity: 1;
   max-height: 999px;
 }
@@ -307,7 +417,220 @@ div:has(> .help-center-title) {
   font-weight: 400;
   line-height: 155.556%;
 }
+/*  */
+/* Help Center - CTA  */
+/*  */
 
+#help-center-cta {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 12px;
+  background-image: url(./images/helpcenter_cta_bg.png);
+  background-size: cover;
+  padding: clamp(35px, 8vw, 65px) 16px;
+  border-radius: 20px;
+  width: 100%;
+  position: relative;
+  isolation: isolate;
+}
+
+#help-center-cta h2 {
+  font-size: clamp(18px, 4vw, 30px);
+  color: var(--Primary-Black, #282727);
+  /* letter-spacing: -0.72px; */
+  line-height: 122.222%;
+  font-weight: 600;
+}
+
+#help-center-cta p {
+  font-size: var(--fs-sm, clamp(14px, 2vw, 20px));
+  width: 82%;
+  max-width: 650px;
+  color: var(--Text-Text-Primary, #282727);
+  line-height: 150%;
+}
+
+#help-center-cta div:has(> a) {
+  display: flex;
+  width: 100%;
+  gap: clamp(8px, 2vw, 15px);
+  justify-content: center;
+}
+
+#help-center-cta div > a {
+  border-radius: 8px;
+  padding: clamp(8px, 2vw, 16px) 16px;
+  font-weight: 500;
+  text-decoration: none;
+  border: 1px solid var(--Blue, #445ac8);
+  text-wrap: nowrap;
+  line-height: 142.857%;
+  width: min(100%, 200px);
+}
+
+#help-center-cta div > a:first-of-type {
+  background: #445ac8;
+  color: var(--White, #fbfbfb);
+}
+
+#help-center-cta div > a:last-of-type {
+  color: var(--Blue, #445ac8);
+}
+
+#help-center-cta div > a:first-of-type:hover {
+  background: var(--primary-blue-hover, #2f73c2);
+}
+#help-center-cta div > a:last-of-type:hover {
+  background: #f7f8ff40;
+}
+
+.helpcenter-cta-blob {
+  z-index: -1;
+  position: absolute;
+  height: auto;
+}
+
+.helpcenter-cta-blob.smiley {
+  top: -17%;
+  left: 0;
+  width: clamp(75px, 12vw, 145px);
+}
+
+.helpcenter-cta-blob.search {
+  transform: translateY(-50%);
+  top: 50%;
+  right: -25px;
+  width: clamp(50px, 12vw, 130px);
+}
+.helpcenter-cta-blob.stars {
+  bottom: -18px;
+  width: clamp(55px, 12vw, 120px);
+  left: -20px;
+}
+
+@media screen and (width > 768px) {
+  .helpcenter-cta-blob.search {
+    right: 0;
+    /* width: 130px; */
+  }
+
+  .helpcenter-cta-blob.smiley {
+    top: -65px;
+    left: 0;
+  }
+
+  .helpcenter-cta-blob.stars {
+    left: 15% !important;
+    bottom: 0 !important;
+  }
+}
+
+@media screen and (width > 1024px) {
+  #help-center-cta {
+    background-position: bottom;
+  }
+}
+
+/*  */
+/* FAQ */
+/*  */
+
+#help-center-faq {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#faqContainer {
+  max-width: min(100%, 590px);
+}
+
+.faq {
+  margin: 0 auto;
+  display: grid;
+  gap: var(--faq-gap);
+}
+
+.faq-item {
+  background: #fff;
+  border-bottom: 1px solid var(--faq-border);
+  overflow: hidden;
+  transition: box-shadow var(--faq-transition);
+}
+
+.faq-item.open :where(strong, svg) {
+  color: var(--Blue, #445ac8);
+  fill: var(--Blue, #445ac8);
+}
+
+.faq-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background: none;
+  border: none;
+  padding: 16px 0px 4px;
+  cursor: pointer;
+  text-align: left;
+}
+.faq-btn:first-of-type {
+  padding-top: 0;
+}
+.faq-btn svg {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  transition: transform var(--faq-transition);
+}
+
+.faq-item.open .faq-btn {
+  padding-bottom: 8px;
+}
+.faq-item.open .faq-btn svg {
+  transform: rotate(90deg);
+}
+
+.faq-question {
+  font-weight: 500;
+  font-size: clamp(14px, 2vw, 18px);
+  color: var(--Primary-Black, #282727);
+  line-height: 142.857%;
+}
+.faq-answer {
+  color: #444;
+  line-height: normal;
+  height: 0;
+  margin-bottom: 20px;
+  overflow: hidden;
+  transition: height var(--faq-transition), padding var(--faq-transition);
+}
+
+@media screen and (width > 1024px) {
+  #help-center-faq {
+    flex-direction: row;
+    align-items: start;
+    gap: 32px;
+    max-width: min(100%, 1100px);
+    margin: 0 auto;
+  }
+
+  /* #help-center-faq .landing-header {
+    text-align: start;
+    align-items: start;
+  } */
+
+  #faqContainer {
+    max-width: min(80%, 590px);
+  }
+}
+/*  */
+/*  */
+/*  */
 @media (width < 768px) {
   #search {
     padding: 8px 20px 8px 45px;
