--- a/style7.css
+++ b/style7.css
@@ -55,7 +55,10 @@ main {
 #help-landing .landing-topics-container {
   gap: clamp(16px, 6vw, 65px);
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(clamp(150px, 20vw, 250px), 1fr)
+  );
   max-width: 1100px;
   margin: 0 auto;
 }
@@ -67,8 +70,15 @@ main {
 
 @media screen and (width > 1024px) {
   #help-landing .landing-topics-container {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    /* display: flex;
+    justify-content: center;
+    flex-wrap: wrap; */
   }
+
+  /* #help-landing .landing-topics-container > div {
+    width: min(100%, 300px);
+  } */
 }
 
 #help-landing {
@@ -228,7 +238,7 @@ div:has(> .help-center-title) {
 
 .sidebar {
   flex: 0 0 260px;
-  border-right: 1px solid #ddd;
+  /* border-right: 1px solid #ddd; */
   padding-right: 10px;
   min-height: 320px;
   position: sticky;
@@ -599,6 +609,10 @@ div:has(> .help-center-title) {
   padding: 16px 0px 4px;
   cursor: pointer;
   text-align: left;
+}
+.faq-btn:hover :where(strong, svg) {
+  color: var(--Blue, #445ac8);
+  stroke: var(--Blue, #445ac8);
 }
 .faq-btn:first-of-type {
   padding-top: 0;
